# oca-ocb-sale

./: README.md
odoo-bringout-oca-ocb-event_booth_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-event_crm_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-event_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-gamification_sale_crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mass_mailing_sale_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-mrp_product_expiry/: README.md  pyproject.toml
odoo-bringout-oca-ocb-point_of_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-point_of_sale/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-point_of_sale/point_of_sale/i18n/: bs.po
odoo-bringout-oca-ocb-pos_daily_sales_reports/: README.md  pyproject.toml
odoo-bringout-oca-ocb-pos_daily_sales_reports/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-pos_daily_sales_reports/pos_daily_sales_reports/i18n/: bs.po
odoo-bringout-oca-ocb-pos_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-pos_sale_loyalty/: README.md  pyproject.toml
odoo-bringout-oca-ocb-pos_sale_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-pos_sale_product_configurator/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product_email_template/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product_expiry/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product_images/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-product_matrix/: README.md  pyproject.toml
odoo-bringout-oca-ocb-project_sale_expense/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-sale/sale/i18n/: bs.po
odoo-bringout-oca-ocb-sale_crm/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_expense/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_expense_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_loyalty/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_loyalty_delivery/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_management/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_mrp/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_mrp_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_product_configurator/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_product_matrix/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_project/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_project_stock/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_quotation_builder/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_sms/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_stock/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_stock_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_timesheet/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sale_timesheet_margin/: README.md  pyproject.toml
odoo-bringout-oca-ocb-sales_team/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_event_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_sale_expense/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_sale_timesheet/: README.md  pyproject.toml
odoo-bringout-oca-ocb-spreadsheet_dashboard_website_sale_slides/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_sale_product_configurators/: README.md  pyproject.toml
odoo-bringout-oca-ocb-test_sale_product_configurators/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-website_event_booth_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_event_booth_sale_exhibitor/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_event_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  REPORTS.md  SECURITY.md  USAGE.md  WIZARDS.md
odoo-bringout-oca-ocb-website_sale/website_sale/i18n/: bs.po
odoo-bringout-oca-ocb-website_sale_autocomplete/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale_autocomplete/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-website_sale_autocomplete/website_sale_autocomplete/i18n/: bs.po
odoo-bringout-oca-ocb-website_sale_loyalty_delivery/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale_loyalty_delivery/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-website_sale_stock_product_configurator/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale_stock_product_configurator/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-website_sale_stock_wishlist/: README.md  pyproject.toml
odoo-bringout-oca-ocb-website_sale_stock_wishlist/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-oca-ocb-website_sale_stock_wishlist/website_sale_stock_wishlist/i18n/: bs.po
(+573 files in other folders)
