[project]
name = "odoo-bringout-oca-ocb-website_sale_loyalty_delivery"
version = "16.0.0"
description = "Free Delivery with Coupon & Loyalty on eCommerce - Allows to offer free shippings in loyalty program rewards on eCommerce"
authors = [
    { name = "Ernad Husremovic", email = "hernad@bring.out.ba" }
]
dependencies = [
    "odoo-bringout-oca-ocb-website_sale_delivery>=16.0.0",
    "odoo-bringout-oca-ocb-website_sale_loyalty>=16.0.0",
    "odoo-bringout-oca-ocb-sale_loyalty_delivery>=16.0.0",
    "requests>=2.25.1"
]
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11", 
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/bringout/0"
repository = "https://github.com/bringout/0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["website_sale_loyalty_delivery"]

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.4.1",
]
